# VSAssistant

./: CMakeLists.txt  README.md  main.cpp
include/: Args.h  File.h  Project.h  Solution.h  utils.h
src/: Args.cpp  File.cpp  Project.cpp  Solution.cpp  utils.cpp
templates/: template.sln  template.vcxproj  template.vcxproj.filters
